# meetings-app

meetings-backend/: .env.example  .gitignore  README.md  pyproject.toml
meetings-backend/app/: config.py  database.py  main.py
meetings-backend/app/modules/auth/: api.py  crud.py  models.py  security.py
meetings-backend/app/modules/meetings/: api.py  crud.py  models.py  utilities.py
meetings-backend/migrations/: env.py
meetings-backend/migrations/versions/: 9839dd0994b9_init.py  cb7047b43d70_added_meetings_details.py  d3a33a97150a_init.py  d99b529e2837_init.py
meetings-frontend/: .env.example  .eslintrc  README.md  index.html  package.json  vite.config.ts
meetings-frontend/src/: App.vue  api.ts  env.d.ts  interfaces.ts  main.ts  utilities.ts
meetings-frontend/src/assets/: styles.scss
meetings-frontend/src/components/: FilesSelector.vue  Header.vue  MeetingForm.vue  MenuLink.vue
meetings-frontend/src/router/: index.ts  main.ts
meetings-frontend/src/stores/: token.ts  utils.ts
meetings-frontend/src/views/: Home.vue  ListUsers.vue  Login.vue  NewMeeting.vue  ViewMeeting.vue
