[tool.poetry]
name = "meetings-backend"
version = "0.1.0"
description = ""
authors = ["Diego Alvarez S. <dialvarezs@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<=3.10"
fastapi = "^0.70.1"
uvicorn = { extras = ["standard"], version = "^0.16.0" }
sqlmodel = "^0.0.5"
alembic = "^1.7.5"
asyncpg = "^0.25.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["argon2"], version = "^1.7.4" }
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
poethepoet = "^0.11.0"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
_isort = "isort meetings/"
_black = "black meetings/"
shell = "poetry shell"
start = { shell = "uvicorn app.main:app --reload" }
format = ["_isort", "_black"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
